Fix nav bar spacing.

--- a/app/assets/stylesheets/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page.css.scss
@@ -68,6 +68,7 @@
       display: inline-block;
       text-align: left;
       float: left;
+      color: $link-color;
     }
   }
 
