--- a/app/assets/stylesheets/nav_bar.css.scss
+++ b/app/assets/stylesheets/nav_bar.css.scss
@@ -21,6 +21,7 @@
     display: inline-block;
     vertical-align: middle;
     font-size: 1.2em;
+    line-height: 1.2em;
     a {
       color: $nav-text-color;
     }
